<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
	android:padding="10dp"
    android:orientation="vertical" >
	<TextView
		android:gravity="top"
		android:id="@+id/tv_verson"
		android:paddingRight="15dp"
		android:textSize="10sp"
		android:text="Mgpio63,Egpio6"
		android:layout_gravity="right"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <ImageView
		    android:id="@+id/ivImageViewer"
		    android:layout_width="170dp"
		    android:layout_height="match_parent"
		    android:layout_marginTop="4dp"
		    android:adjustViewBounds="false"
            android:contentDescription="@string/TEXT_IMAGE"
		    android:background="#c4c3c3" />
		 <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
			 android:gravity="center"
         android:orientation="vertical" >
				<Button
				    android:id="@+id/btnOpenDevice"
				    android:layout_width="wrap_content"
				    android:layout_height="50dp"
				    android:text="@string/TEXT_OPEN_DEVICE"
					android:background="@drawable/bg_alibuybutton"
				    android:textSize="15sp" />
		        <Button
		            android:id="@+id/btnCloseDevice"
		            android:layout_width="wrap_content"
		            android:layout_height="50dp"
					android:layout_marginTop="5dp"
		            android:text="@string/TEXT_CLOSE_DEVICE"
					android:background="@drawable/bg_alibuybutton"
		            android:textSize="15sp" />
		        <Button
		            android:id="@+id/btnGetImage"
		            android:layout_width="wrap_content"
		            android:layout_height="50dp"
		            android:text="@string/TEXT_GET_IMAGE"
					android:layout_marginTop="5dp"
					android:background="@drawable/bg_alibuybutton"
		            android:textSize="15sp" />
		        <Button
		            android:id="@+id/btnOnVideo"
		            android:layout_width="wrap_content"
		            android:layout_height="50dp"
		            android:text="@string/TEXT_VIDEO"
					android:layout_marginTop="5dp"
					android:background="@drawable/bg_alibuybutton"
		            android:textSize="15sp" />
		        <Button
		            android:id="@+id/btnGetImageQuality"
		            android:layout_width="wrap_content"
		            android:layout_height="50dp"

					android:layout_marginTop="5dp"
					android:background="@drawable/bg_alibuybutton"
					android:text="@string/TEXT_GET_QUALITY"
		            android:textSize="15sp" />
	    </LinearLayout>
    </LinearLayout>
	<RadioGroup  
	    android:layout_width="match_parent"  
	    android:layout_height="wrap_content"  
	    android:orientation="horizontal" >  
	    <RadioButton  
	        android:id="@+id/firstTemp" 
	        android:checked="true" 
	        android:text="@string/FIRST_TEMPLATE"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content" />
	    <RadioButton  
	        android:id="@+id/secondTemp"  
	        android:text="@string/SECOND_TEMPLATE"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content" />
	</RadioGroup>  
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingTop="10sp"
        android:orientation="horizontal" >

		<ScrollView
			android:layout_width="200dp"
			android:layout_height="100dp">
			<TextView
				android:id="@+id/tvTemp"
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:background="#ffdddddd"
				android:singleLine="false"
				android:text="@string/TEXT_CHAR"
				android:textColor="#ff000000"/>
		</ScrollView>

		<LinearLayout
	       android:layout_width="match_parent"
	       android:layout_height="wrap_content"
	       android:orientation="vertical"
			android:gravity="center">
			<Button
			    android:id="@+id/btnCreateTemp"
			    android:layout_width="wrap_content"
				android:background="@drawable/bg_alibuybutton"
			    android:layout_height="50dp"
			    android:text="@string/TEXT_CREATE_TEMP"
			    android:textSize="15sp" />
	        <Button
	            android:id="@+id/btnMatchTemp"
	            android:layout_width="wrap_content"
	            android:layout_height="50dp"
				android:layout_marginTop="5dp"
				android:background="@drawable/bg_alibuybutton"
	            android:text="@string/TEXT_MATCH_TEMP"
	            android:textSize="15sp" />

		</LinearLayout>
    </LinearLayout>
</LinearLayout>
