<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">
    <TextView
        android:text="sssss"
        android:textColor="@color/black"
        android:id="@+id/tv_config"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:id="@+id/linearlayout001"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_paper_in"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/bg_alibuybutton"
            android:text="@string/button_paper_in" />

        <Button
            android:id="@+id/button_paper_out"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_alibuybutton"
            android:text="@string/button_paper_out" />
    </LinearLayout>

    <Button
        android:id="@+id/button_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_alibuybutton"
        android:text="@string/button_text"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/ll_coding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/sp_coding"
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:background="@drawable/bg_alibuybutton"
            android:entries="@array/coding"></Spinner>

        <Button
            android:id="@+id/btn_print_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:background="@drawable/bg_alibuybutton"
            android:text="@string/button_txt"
            android:textSize="20sp" />

    </LinearLayout>

    <Button
        android:id="@+id/button_pic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_alibuybutton"
        android:text="@string/button_pic"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/linearlayout002"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/set_gra_level"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/ev_gray_level"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/edit"
            android:hint="@string/set_gra_level_hint"
            android:inputType="number">

            <requestFocus />
        </EditText>
    </LinearLayout>

    <Button
        android:id="@+id/button_set_gray"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_alibuybutton"
        android:text="@string/button_set_gray" />

    <LinearLayout
        android:id="@+id/linearlayout003"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_print_setting"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/bg_alibuybutton"
            android:text="@string/button_print_setting" />

        <ToggleButton
            android:id="@+id/button_test"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"

            android:background="@drawable/bg_alibuybutton"
            android:textOff="@string/btntestoff_text"
            android:textOn="@string/btnteston_text" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_version"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="1.0.0"
        android:visibility="gone" />

</LinearLayout>