<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    
	<TextView
	    android:id="@+id/Hum_title"
		android:layout_marginTop="20dp"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:textSize="20sp"
		android:gravity="left"
		android:textColor="@color/black"
		android:layout_marginLeft="10dp"
	    android:text="@string/Humidity"
	/>
<RelativeLayout
	android:layout_width="match_parent"
	android:layout_height="120dp"
	android:background="@drawable/datas_kuang"
	android:layout_marginTop="20dp"
	>

	<TextView
		android:id="@+id/Hum_value"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textSize="50sp"
		android:gravity="center"
		android:text="@string/Humidity_value"
		android:layout_marginRight="45dp"
		android:layout_marginEnd="45dp"
		android:layout_centerVertical="true"
		android:layout_alignParentRight="true"
		android:layout_alignParentEnd="true" />

	<ImageView
		android:layout_width="70dp"
		android:layout_height="70dp"
		android:gravity="center"
		android:background="@drawable/layout_shidu"
		android:layout_marginLeft="23dp"
		android:layout_marginStart="23dp"
		android:id="@+id/imageView3"
		android:layout_centerVertical="true"
		android:layout_alignParentLeft="true"
		android:layout_alignParentStart="true" />

	<ImageView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="@drawable/geduan"
		android:layout_marginLeft="15dp"
		android:layout_marginStart="15dp"
		android:id="@+id/imageView4"
		android:layout_centerVertical="true"
		android:layout_toRightOf="@+id/imageView3"
		android:layout_toEndOf="@+id/imageView3" />
</RelativeLayout>


	<TextView
	    android:id="@+id/Tem_title"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="20dp"
	    android:textSize="20sp"
		android:textColor="@color/black"
		android:layout_marginLeft="10dp"
		android:gravity="left"
	    android:text="@string/Temperature" 
	/>

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="120dp"
		android:background="@drawable/datas_kuang"
		android:layout_marginTop="20dp"
		>

		<TextView
			android:id="@+id/Tem_value"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="50sp"
			android:gravity="center"
			android:text="@string/Temperature_value"
			android:layout_marginRight="44dp"
			android:layout_marginEnd="44dp"
			android:layout_centerVertical="true"
			android:layout_alignParentRight="true"
			android:layout_alignParentEnd="true" />

		<ImageView
			android:layout_width="85dp"
			android:layout_height="85dp"
			android:gravity="center"
			android:background="@drawable/layout_wendu"
			android:layout_marginLeft="19dp"
			android:layout_marginStart="19dp"
			android:id="@+id/imageView5"
			android:layout_centerVertical="true"
			android:layout_alignParentLeft="true"
			android:layout_alignParentStart="true" />

		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="50dp"
			android:background="@drawable/geduan"
			android:id="@+id/imageView6"
			android:layout_centerVertical="true"
			android:layout_toRightOf="@+id/imageView5"
			android:layout_toEndOf="@+id/imageView5" />
	</RelativeLayout>

	<LinearLayout
	    android:id="@+id/linearLayout1"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="50dp"
		android:layout_marginLeft="5dp"
		android:layout_marginRight="5dp"
	    android:orientation="horizontal" >

	    <Button 
	        android:id="@+id/buttonstart"
	        android:layout_width="wrap_content" 
	        android:layout_height="wrap_content" 
		    android:layout_gravity="fill"
			android:background="@drawable/selector_item_blue"
		    android:layout_weight="1"
		    android:text="@string/start"
	        />

		<Button
		    android:id="@+id/buttonstop"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="fill"
		    android:layout_weight="1"
			android:layout_marginLeft="5dp"
			android:background="@drawable/selector_item_blue"
		    android:text="@string/stop"
		    />
	</LinearLayout>
	
</LinearLayout>